# enterprise-rag-system

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: __init__.py  config.py
src/api/: dependencies.py  main.py
src/api/routes/: documents.py  health.py  query.py
src/services/: __init__.py  chunker.py  embeddings.py  llm.py  rag_pipeline.py  vector_store.py
tests/: test_api.py  test_services.py
